#60 Added color to search functions

--- a/MyEssentialOilRemedies/iphone.storyboard
+++ b/MyEssentialOilRemedies/iphone.storyboard
@@ -2681,7 +2681,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="FVx-dx-Rr4"/>
         <segue reference="9Qq-SB-b9d"/>
-        <segue reference="i3e-cA-Y4r"/>
+        <segue reference="RBu-Ci-AeC"/>
         <segue reference="tE5-8K-Pn9"/>
     </inferredMetricsTieBreakers>
 </document>
